--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
-  text-align: center;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+*{
+    font-family: 'Poppins', sans-serif;
+}
+.anchor{
+    text-decoration: none;
+    color: black;
+}
+.navbar-brand{
+    font-weight: 600;
+    font-size: 25px;
+    color: white;
+    margin-left: 80px;
+    
+}
+.navbar{
+    background-image: linear-gradient(
+        to right,
+        rgb(83, 44, 44),
+        rgb(156, 85, 92),
+        rgba(221, 190, 190, 0.2),
+        rgba(12, 216, 199, 0)
+     );
+    border-top-left-radius: 10px;
+}
+.menu{
+    display: flex;
+}
+.menu li{
+    list-style: none;
+    height: 20px;
+    font-weight: 600;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-link
+{
+    color: black;
+}
+.banner img{
+    width: 80%;
+    height: 80vh;
+    object-fit: cover;
+    opacity: 0.8;
+    border-radius: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.leagues .flex{
+    display: flex;
+    flex-wrap: wrap;
+   
+}
+
+.leagues h1{
+    margin-top: 40px;
+    margin-bottom: 20px;
+    
+    margin-left: 40%;
+    text-shadow: 2px 2px #9b2424;
+    
+}
+.image{
+    background-image: linear-gradient(
+      to right,
+      rgb(83, 44, 44),
+      rgb(156, 85, 92),
+      rgba(221, 190, 190, 0.2),
+      rgba(12, 216, 199, 0)
+   ),
+    url("https://images.pexels.com/photos/7915289/pexels-photo-7915289.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    width: 100%;
+    margin: auto;
+    background-position: center;
+    
+    height: 500px;
+    object-position: center;
   }
+.image{
+    position: relative;
+    
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.banner-text{
+    position: absolute;
+    top:150px;
+    color: white;
+    left: 90px;
+   
 }
-
-.App-link {
-  color: #61dafb;
+.banner-text h2{
+    font-weight: 600;
+    font-size: 50px;
+    letter-spacing: 1px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer{
+   
+    width: 100%;
+    padding: 50px;
+    margin: auto;
+    border-top: 1px solid rgb(197, 196, 196);
 }
